WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68786
DFG support for op_resolve_global is not enabled
https://bugs.webkit.org/show_bug.cgi?id=68786
Summary
DFG support for op_resolve_global is not enabled
Filip Pizlo
Reported
2011-09-25 19:49:50 PDT
Support for the op_resolve_global opcode was added to the DFG, but code that uses it is still not DFG compiled because op_resolve_global was not added to DFGCapabilities.h.
Attachments
the patch
(3.65 KB, patch)
2011-09-25 19:56 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(1.09 KB, patch)
2011-09-25 20:00 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-09-25 19:56:49 PDT
Created
attachment 108622
[details]
the patch
Filip Pizlo
Comment 2
2011-09-25 20:00:41 PDT
Created
attachment 108623
[details]
the patch
Geoffrey Garen
Comment 3
2011-09-25 20:09:20 PDT
Comment on
attachment 108623
[details]
the patch r=me
Filip Pizlo
Comment 4
2011-09-25 20:35:51 PDT
Landed in
r95932
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug