DFG support for op_resolve_global is not enabled https://bugs.webkit.org/show_bug.cgi?id=68786

Reviewed by Geoffrey Garen.

* dfg/DFGCapabilities.h:
(JSC::DFG::canCompileOpcode):



Canonical link: https://commits.webkit.org/84750@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95932 268f45cc-cd09-0410-ab3c-d52691b4dbfc