Source/JavaScriptCore/dfg/DFGCapabilities.h
@@ -118,6 +118,7 @@ inline bool canCompileOpcode(OpcodeID opcodeID)
     case op_call_put_result:
     case op_resolve:
     case op_resolve_base:
+    case op_resolve_global:
     case op_strcat:
     case op_to_primitive:
     case op_throw:
